Starting to add content

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
             <div class="content__wrapper">
                 <h3>Chapters</h3>
                 <nav class="grid__container">
-                    <a href="chapters/01-designing-interfaces.html"><h2>01</h2> Designing Interfaces</a>
-                    <a href="#"><h2>02</h2> The Building Blocks of Interfaces</a>
-                    <a href="#"><h2>03</h2> Information Architecture</a>
-                    <a href="#"><h2>04</h2> Getting from A to B</a>
-                    <a href="#"><h2>05</h2> Designing Mobile Interfaces</a>
-                    <a href="#"><h2>06</h2> Designing Desktop Interfaces</a>
-                    <a href="#"><h2>07</h2> Animating Interfaces</a>
-                    <a href="#"><h2>08</h2> Project X-Rays</a>
-                    <a href="#"><h2>09</h2> Where to from here for UI?</a>
+                    <a href="chapters/01-designing-interfaces.html"><h2>01</h2> <p>Designing Interfaces</p></a>
+                    <a href="#"><h2>02</h2> <p>The Building Blocks of Interfaces</p></a>
+                    <a href="#" class='link--inactive'><h2>03</h2> <p>Information Architecture</p></a>
+                    <a href="#" class='link--inactive'><h2>04</h2> <p>Getting from A to B</p></a>
+                    <a href="#" class='link--inactive'><h2>05</h2> <p>Designing Mobile Interfaces</p></a>
+                    <a href="#" class='link--inactive'><h2>06</h2> <p>Designing Desktop Interfaces</p></a>
+                    <a href="#" class='link--inactive'><h2>07</h2> <p>Animating Interfaces</p></a>
+                    <a href="#" class='link--inactive'><h2>08</h2> <p>Project X-Rays</p></a>
+                    <a href="#" class='link--inactive'><h2>09</h2> <p>Where to from here for UI?</p></a>
                 </nav>
             </div>
         </section>
