Finished updating html files with all new content

--- a/resources/masterapprentice.html
+++ b/resources/masterapprentice.html
@@ -7,20 +7,20 @@
     <title>Document</title>
 
     <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
     <header class="header-navigation">
         <nav class='navigation__container'>
-            <a href="../index.html" class='main-logo'>Building Beautiful UIs</a>
+            <a href="/index.html" class='main-logo'>Building Beautiful UIs</a>
 
             <ul class="navigation__links">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li>
                     <p class='submenu__trigger'>Chapters</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="../chapters/01-designing-interfaces.html"><h5>01</h5><p>Designing Interfaces</p></a></li>
-                        <li><a href="#"><h5>02</h5><p>The Building Blocks of Interfaces</p></a></li>
+                        <li><a href="/chapters/01-designing-interfaces.html"><h5>01</h5><p>Designing Interfaces</p></a></li>
+                        <li><a href="/chapters/02-The-Building-Blocks-of-Interfaces.html"><h5>02</h5><p>The Building Blocks of Interfaces</p></a></li>
                         <li><a href="#"><h5>03</h5><p>Information Architecture</p></a></li>
                         <li><a href="#"><h5>04</h5><p>Getting from A to B</p></a></li>
                         <li><a href="#"><h5>05</h5><p>Designing Mobile Interfaces</p></a></li>
@@ -33,7 +33,7 @@
                 <li>
                     <p class='submenu__trigger link--active'>Resources</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="../resources/masterapprentice.html"><p>Master-Apprentice Exercises</p></a></li>
+                        <li><a href="/resources/masterapprentice.html"><p>Master-Apprentice Exercises</p></a></li>
                         <li><a href="#"><p>Swipe Files</p></a></li>
                     </ul>
                 </li>
@@ -65,14 +65,14 @@
 
         <section class="resources--desktop">
             <div class="content__wrapper">
-                <h3>Desktop</h3>
+                <h2>Desktop</h2>
                 <p>The desktop examples I’ve included are browser-focused, but the principles apply equally to desktop software.</p>
 
                 <div class="resources__list">
                     <article class='list__item'>
                         <a href="https://www.gov.uk/" target="__blank">
                             <figure>
-                                <img src="../assets/images/resources/gov.jpg" alt="Landing page of the gov.uk website">
+                                <img src="/assets/images/resources/gov.jpg" alt="Landing page of the gov.uk website">
                             </figure>
                             <div>
                                 <h3>GOV.UK</h3>
@@ -84,7 +84,7 @@
                     <article class='list__item'>
                         <a href="http://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html" target="__blank">
                             <figure>
-                                <img src="../assets/images/resources/pixelmoon.jpg" alt="Landing page of the 'If the Moon Were Only 1 Pixel' website">
+                                <img src="/assets/images/resources/pixelmoon.jpg" alt="Landing page of the 'If the Moon Were Only 1 Pixel' website">
                             </figure>
                             <div>
                                 <h3>If the Moon Were Only 1 Pixel</h3>
@@ -98,14 +98,14 @@
 
         <section class="resources--mobile">
             <div class="content__wrapper">
-                <h3>Mobile (Smartphone, Tablet)</h3>
+                <h2>Mobile (Smartphone, Tablet)</h2>
                 <p>The mobile examples I’ve included are for iOS (because I have an iPhone), but – broadly – the principles of information architecture and user interface design map over to other mobile platforms.</p>
 
                 <div class="resources__list">
                     <article class='list__item'>
                         <a href="https://flexibits.com/fantastical-iphone" target="__blank">
                             <figure>
-                                <img src="../assets/images/resources/fantastical.jpg" alt="Landing page of the 'Fantastical' website">
+                                <img src="/assets/images/resources/fantastical.jpg" alt="Landing page of the 'Fantastical' website">
                             </figure>
                             <div>
                                 <h3>Fantastical</h3>
@@ -117,7 +117,7 @@
                     <article class='list__item'>
                         <a href="https://culturedcode.com/things/whats-new/" target="__blank">
                             <figure>
-                                <img src="../assets/images/resources/things.jpg" alt="Landing page of the 'Things 3' website">
+                                <img src="/assets/images/resources/things.jpg" alt="Landing page of the 'Things 3' website">
                             </figure>
                             <div>
                                 <h3>Things 3</h3>
@@ -139,7 +139,7 @@
 
     <footer>
         <div class="logo__group">
-            <a href="../index.html" class='main-logo'>Building Beautiful UIs</a>
+            <a href="/index.html" class='main-logo'>Building Beautiful UIs</a>
 
             <div class="logo--adobe logo--greyscale">
                 <svg version="1.1" id="ps_x5F_cc_x5F_app_x5F_RGB.svg"
