--- a/resources/masterapprentice.html
+++ b/resources/masterapprentice.html
@@ -17,6 +17,20 @@
             <ul class="navigation__links">
                 <li><a href="/index.html">Home</a></li>
                 <li>
+                    <p class='submenu__trigger'>Introduction</p>
+                    <ul class='chapter__submenu'>
+                        <li><a href="/introduction/overview.html">
+                                <p>Overview</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>Foreword</p>
+                            </a></li>
+                        <li><a href="#">
+                                <p>Audience</p>
+                            </a></li>
+                    </ul>
+                </li>
+                <li>
                     <p class='submenu__trigger'>Chapters</p>
                     <ul class='chapter__submenu'>
                         <li><a href="/chapters/01-designing-interfaces.html"><h5>01</h5><p>Designing Interfaces</p></a></li>
