Updated broken link

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="content__wrapper">
                 <h2>Introduction</h2>
                 <nav class="grid__container">
-                    <a href="/resources/masterapprentice.html">Overview</a>
+                    <a href="/introduction/overview.html">Overview</a>
                     <a href="#" class='link--inactive'>Foreword</a>
                     <a href="#" class='link--inactive'>Audience</a>
                 </nav>
