Tweaks to layout
- Fixed navbar responsiveness issues
- Re-jigged layout for chapter intro/contents
- Added extra footer copyright info

--- a/index.html
+++ b/index.html
@@ -21,67 +21,94 @@
                 <li>
                     <p class='submenu__trigger'>Introduction</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="/introduction/overview.html">
+                        <li>
+                            <a href="/introduction/overview.html">
                                 <p>Overview</p>
-                            </a></li>
+                            </a>
+                        </li>
                         <li><a href="#">
                                 <p>Foreword</p>
-                            </a></li>
-                            <li><a href="#">
-                                    <p>Audience</p>
-                                </a></li>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p>Audience</p>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <p class='submenu__trigger'>Chapters</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="/chapters/01-designing-interfaces.html">
+                        <li>
+                            <a href="/chapters/01-Designing-Interfaces.html">
                                 <h5>01</h5>
                                 <p>Designing Interfaces</p>
-                            </a></li>
-                        <li><a href="/chapters/02-The-Building-Blocks-of-Interfaces.html">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/chapters/02-The-Building-Blocks-of-Interfaces.html">
                                 <h5>02</h5>
                                 <p>The Building Blocks of Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <h5>03</h5>
                                 <p>Information Architecture</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <h5>04</h5>
                                 <p>Getting from A to B</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <h5>05</h5>
                                 <p>Designing Mobile Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <h5>06</h5>
                                 <p>Designing Desktop Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <h5>07</h5>
                                 <p>Animating Interfaces</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <h5>08</h5>
                                 <p>Project X-Rays</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <h5>09</h5>
                                 <p>Where to from here for UI?</p>
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li>
                     <p class='submenu__trigger'>Resources</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="/resources/masterapprentice.html">
+                        <li>
+                            <a href="/resources/masterapprentice.html">
                                 <p>Master-Apprentice Exercises</p>
-                            </a></li>
-                        <li><a href="#">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
                                 <p>Swipe Files</p>
-                            </a></li>
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -129,7 +156,7 @@
             <div class="content__wrapper">
                 <h2>Chapters</h2>
                 <nav class="grid__container">
-                    <a href="/chapters/01-designing-interfaces.html">
+                    <a href="/chapters/01-Designing-Interfaces.html">
                         <h2>01</h2>
                         <p>Designing Interfaces</p>
                     </a>
@@ -215,7 +242,7 @@
             </div>
         </div>
 
-        <p class='copyright-info'>Copyright © 2019 | Adobe XD + Mr Murphy Ltd.</p>
+        <p class='copyright-info'>Copyright © 2019  |  Mr Murphy Ltd + Adobe Xd  |  Design and Code by Dan Gold at Little Thunder.</p>
     </footer>
 </body>
 
