--- a/resources/masterapprentice.html
+++ b/resources/masterapprentice.html
@@ -33,7 +33,7 @@
                 <li>
                     <p class='submenu__trigger'>Chapters</p>
                     <ul class='chapter__submenu'>
-                        <li><a href="/chapters/01-designing-interfaces.html"><h5>01</h5><p>Designing Interfaces</p></a></li>
+                        <li><a href="/chapters/01-Designing-Interfaces.html"><h5>01</h5><p>Designing Interfaces</p></a></li>
                         <li><a href="/chapters/02-The-Building-Blocks-of-Interfaces.html"><h5>02</h5><p>The Building Blocks of Interfaces</p></a></li>
                         <li><a href="#"><h5>03</h5><p>Information Architecture</p></a></li>
                         <li><a href="#"><h5>04</h5><p>Getting from A to B</p></a></li>
@@ -55,95 +55,106 @@
         </nav>
     </header>
 
-    <main class='content--resources'>
-        <section class="intro__wrapper">
-            <div class="content__wrapper">
-                <h4>Resources</h4>
-                <h1>Master-Apprentice Exercises</h1>
+    <main class='content--resources content--chapters'>
+        <section class="content__wrapper">
+            <h4>Resources</h4>
+            <h1>Master-Apprentice Exercises</h1>
 
-                <p>You can learn a great deal by looking at others’ work and analysing it. Breaking down existing user interfaces and rebuilding them in XD will teach you how to ‘see through the eyes of others’.</p>
+            <p>You can learn a great deal by looking at others’ work and analysing it. Breaking down existing user interfaces and rebuilding them in XD will teach you how to ‘see through the eyes of others’.</p>
 
-                <p>I’ve included some ‘Master-Apprentice’ exercises where I’ve analysed a variety of interfaces in different contexts:</p>
+            <p>I’ve included some ‘Master-Apprentice’ exercises where I’ve analysed a variety of interfaces in different contexts:</p>
 
-                <ul>
-                    <li>Desktop</li>
-                    <li>Mobile (Smartphone, Tablet)</li>
-                    <li>Wrist</li>
-                </ul>
+            <ul>
+                <li>Desktop</li>
+                <li>Mobile (Smartphone, Tablet)</li>
+                <li>Wrist</li>
+            </ul>
 
-                <p>I use this Master-Apprentice approach in my teaching at Belfast School of Art, and the students who undertake the exercises invariably end up learning much faster and producing more refined work as a consequence. I hope you find the examples useful.</p>
-                <p>Looking at these interfaces and how they are structured will teach you about user interface design and information architecture in different contexts: from the relative space of a desktop context to the tighter confines of a wrist context.</p>
-                <p>I’ve undertaken a few exercises that I’ve included to demonstrate how I learn about user interface design by analysing, deconstructing and reconstructing others’ work.</p>
+            <p>I use this Master-Apprentice approach in my teaching at Belfast School of Art, and the students who undertake the exercises invariably end up learning much faster and producing more refined work as a consequence. I hope you find the examples useful.</p>
+            <p>Looking at these interfaces and how they are structured will teach you about user interface design and information architecture in different contexts: from the relative space of a desktop context to the tighter confines of a wrist context.</p>
+            <p>I’ve undertaken a few exercises that I’ve included to demonstrate how I learn about user interface design by analysing, deconstructing and reconstructing others’ work.</p>
+        </section>
+
+        <section class="resources--desktop content__wrapper">
+            <h2>Desktop</h2>
+            <p>The desktop examples I’ve included are browser-focused, but the principles apply equally to desktop software.</p>
+
+            <div class="resources__list">
+                <article class='list__item'>
+                    <a href="https://www.gov.uk/" target="__blank">
+                        <figure>
+                            <img src="/assets/images/resources/gov.jpg" alt="Landing page of the gov.uk website">
+                        </figure>
+                        <div>
+                            <h3>GOV.UK</h3>
+                            <p>The UK government’s award-winning GOV.UK website is an excellent example of a website that simplifies complex information. It’s user interface is clear and information-focused, which serves its users well. The information hierarchy – at both the site-level and the page-level – is clear, enabling users to navigate the information presented easily.</p>
+                        </div>
+                    </a>
+                </article>
+
+                <article class='list__item'>
+                    <a href="http://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html" target="__blank">
+                        <figure>
+                            <img src="/assets/images/resources/pixelmoon.jpg" alt="Landing page of the 'If the Moon Were Only 1 Pixel' website">
+                        </figure>
+                        <div>
+                            <h3>If the Moon Were Only 1 Pixel</h3>
+                            <p>A side project by Josh Worth, If the Moon Were Only 1 Pixel does a wonderful job of visualising complex information. I’ve intentionally included this more experiemtal example to show what’s possible with very minimal building blocks of interfaces: points, lines and planes of color.</p>
+                        </div>
+                    </a>
+                </article>
             </div>
         </section>
 
-        <section class="resources--desktop">
-            <div class="content__wrapper">
-                <h2>Desktop</h2>
-                <p>The desktop examples I’ve included are browser-focused, but the principles apply equally to desktop software.</p>
+        <section class="resources--mobile content__wrapper">
+            <h2>Mobile (Smartphone, Tablet)</h2>
+            <p>The mobile examples I’ve included are for iOS (because I have an iPhone), but – broadly – the principles of information architecture and user interface design map over to other mobile platforms.</p>
 
-                <div class="resources__list">
-                    <article class='list__item'>
-                        <a href="https://www.gov.uk/" target="__blank">
-                            <figure>
-                                <img src="/assets/images/resources/gov.jpg" alt="Landing page of the gov.uk website">
-                            </figure>
-                            <div>
-                                <h3>GOV.UK</h3>
-                                <p>The UK government’s award-winning GOV.UK website is an excellent example of a website that simplifies complex information. It’s user interface is clear and information-focused, which serves its users well. The information hierarchy – at both the site-level and the page-level – is clear, enabling users to navigate the information presented easily.</p>
-                            </div>
-                        </a>
-                    </article>
+            <div class="resources__list">
+                <article class='list__item'>
+                    <a href="https://flexibits.com/fantastical-iphone" target="__blank">
+                        <figure>
+                            <img src="/assets/images/resources/fantastical.jpg" alt="Landing page of the 'Fantastical' website">
+                        </figure>
+                        <div>
+                            <h3>Fantastical</h3>
+                            <p>Fantastical 2 for iOS by Flexibits is a lovely example of an mobile application that condenses a great deal of information into a beautifully designed user interface. As a calendar and reminders app it has to fit a great deal into a small space and it does so minimally and elegantly.</p>
+                        </div>
+                    </a>
+                </article>
 
-                    <article class='list__item'>
-                        <a href="http://joshworth.com/dev/pixelspace/pixelspace_solarsystem.html" target="__blank">
-                            <figure>
-                                <img src="/assets/images/resources/pixelmoon.jpg" alt="Landing page of the 'If the Moon Were Only 1 Pixel' website">
-                            </figure>
-                            <div>
-                                <h3>If the Moon Were Only 1 Pixel</h3>
-                                <p>A side project by Josh Worth, If the Moon Were Only 1 Pixel does a wonderful job of visualising complex information. I’ve intentionally included this more experiemtal example to show what’s possible with very minimal building blocks of interfaces: points, lines and planes of color.</p>
-                            </div>
-                        </a>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <section class="resources--mobile">
-            <div class="content__wrapper">
-                <h2>Mobile (Smartphone, Tablet)</h2>
-                <p>The mobile examples I’ve included are for iOS (because I have an iPhone), but – broadly – the principles of information architecture and user interface design map over to other mobile platforms.</p>
-
-                <div class="resources__list">
-                    <article class='list__item'>
-                        <a href="https://flexibits.com/fantastical-iphone" target="__blank">
-                            <figure>
-                                <img src="/assets/images/resources/fantastical.jpg" alt="Landing page of the 'Fantastical' website">
-                            </figure>
-                            <div>
-                                <h3>Fantastical</h3>
-                                <p>Fantastical 2 for iOS by Flexibits is a lovely example of an mobile application that condenses a great deal of information into a beautifully designed user interface. As a calendar and reminders app it has to fit a great deal into a small space and it does so minimally and elegantly.</p>
-                            </div>
-                        </a>
-                    </article>
-
-                    <article class='list__item'>
-                        <a href="https://culturedcode.com/things/whats-new/" target="__blank">
-                            <figure>
-                                <img src="/assets/images/resources/things.jpg" alt="Landing page of the 'Things 3' website">
-                            </figure>
-                            <div>
-                                <h3>Things 3</h3>
-                                <p>Things 3 for iOS by Cultured Code is an award-winning personal task manager. The app’s user interface not only looks stunning, it feels stunning with delightful interactions that communicate how the app works to the user. In this file, I’ve also shown how Things 3 condenses down into a watchOS app so you can see the challenges of designing the same app in two very different contexts.</p>
-                            </div>
-                        </a>
-                    </article>
-                </div>
+                <article class='list__item'>
+                    <a href="https://culturedcode.com/things/whats-new/" target="__blank">
+                        <figure>
+                            <img src="/assets/images/resources/things.jpg" alt="Landing page of the 'Things 3' website">
+                        </figure>
+                        <div>
+                            <h3>Things 3</h3>
+                            <p>Things 3 for iOS by Cultured Code is an award-winning personal task manager. The app’s user interface not only looks stunning, it feels stunning with delightful interactions that communicate how the app works to the user. In this file, I’ve also shown how Things 3 condenses down into a watchOS app so you can see the challenges of designing the same app in two very different contexts.</p>
+                        </div>
+                    </a>
+                </article>
             </div>
         </section>
 
         <section class="additional-content">
+            <div class="content__wrapper additional__about">
+                <img src="/images/overview/mr-murphy.png" alt="Christopher Murphy">
+                <h3>Christopher Murphy</h3>
+                <a href="https://www.twitter.com/fehler" style="margin-bottom: 2rem;" target='__blank'>@fehler</a>
+                <p>A designer, writer and speaker based in Belfast, Christopher mentors purpose-driven businesses,
+                    helping them to launch and thrive. He encourages small businesses to think big and he enables big
+                    businesses to think small.</p>
+                <p>As a design strategist he has worked with companies, large and small, to help drive innovation,
+                    drawing on his 25+ years of experience working with clients including: Adobe, EA and the BBC.</p>
+                <p>The author of numerous books, he is currently hard at work on his eighth, ‘Designing Delightful
+                    Experiences’, for Smashing Magazine and ninth, ‘Building Beautiful UIs’, for Adobe. Both are
+                    accompanied by a wealth of digital resources, and are drawn from Christopher’s 15+ years of
+                    experience as a design educator.</p>
+            </div>
+        </section>
+
+        <section class="additional-content additional-content--extra">
             <div class="content__wrapper">
                 <p>I hope you find this resource useful. I’m also currently working on a book for the fine folks at <a href="https://www.smashingmagazine.com/" target='__blank'>Smashing Magazine</a> – ‘Designing Delightful Experiences’ – which focuses on the user experience design process from start to finish. It will be published in late 2019.</p>
                 <p>You might like to <a href="https://twitter.com/fehler/" target='__blank'>follow me on Twitter</a> for updates on this book, that book and other projects I’m working on.</p>
@@ -175,7 +186,7 @@
             </div>
         </div>
 
-        <p class='copyright-info'>Copyright  © 2019   |   Adobe XD + Mr Murphy Ltd.</p>
+        <p class='copyright-info'>Copyright  © 2019   |   Mr Murphy Ltd + Adobe Xd | Design and Code by Dan Gold at Little Thunder.</p>
     </footer>
 </body>
 </html>
