--- a/resources/masterapprentice.html
+++ b/resources/masterapprentice.html
@@ -186,7 +186,7 @@
             </div>
         </div>
 
-        <p class='copyright-info'>Copyright  © 2019   |   Mr Murphy Ltd + Adobe Xd | Design and Code by Dan Gold at Little Thunder.</p>
+        <p class='copyright-info'>Copyright © 2019  |  Mr Murphy Ltd + Adobe Xd  |  Design and Code by <a href="https://dan.gold" target='__blank'>Dan Gold</a> at <a href="https://littlethunder.co/" target='__blank'>Little Thunder</a>.</p>
     </footer>
 </body>
 </html>
