--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Home | Building Beautiful UIs</title>
 
     <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -213,7 +213,7 @@
                 <p>Adobe XD is made for designers by designers. It’s the fastest way to design, prototype and share any
                     user experience, from websites and mobile apps to voice interactions and more. Even better, it’s
                     free.</p>
-                <a href="#" class='button__cta'>Download Now</a>
+                <a href="https://www.adobe.com/products/xd.html" class='button__cta' target='__blank'>Download Now</a>
             </div>
         </section>
     </main>
@@ -242,7 +242,7 @@
             </div>
         </div>
 
-        <p class='copyright-info'>Copyright © 2019  |  Mr Murphy Ltd + Adobe Xd  |  Design and Code by <a href="https://dan.gold" target='__blank'>Dan Gold</a> at <a href="https://littlethunder.co/" target='__blank'>Little Thunder</a>.</p>
+        <p class='copyright-info'>Copyright © 2018–19 · <a href="https://mrmurphy.com" target='__blank'>Mr Murphy ®</a> + <a href="https://www.adobe.com/products/xd.html" target='__blank'>Adobe XD</a>  <br>  Design and Code by <a href="https://dan.gold" target='__blank'>Dan Gold</a> at <a href="https://littlethunder.co/" target='__blank'>Little Thunder</a>.</p>
     </footer>
 </body>
 </html>
